--- a/chamber/styles/chamber_base.css
+++ b/chamber/styles/chamber_base.css
@@ -650,9 +650,8 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-pointer-events: none;
 overflow: hidden;
-opacity: 0;              /* hide visually, NOT display:none */
+opacity: 0;           
 transition: opacity 0.3s ease;
 z-index: 5;
 }
@@ -751,27 +750,47 @@ to   { opacity: 1; transform: scale(1); }
 
 /* THANKS HTML */
 #results h2 {
-color: var(--primary-color);
-margin-left: 15px;
-text-decoration: underline;
+ display: inline-block; /* allows vertical margins */
+  margin-top: 40px;
+  margin-bottom: -10px;
+  margin-left: 15px;
+  padding: 15px;
+  color: var(--background-color);
+   background: var(--primary-color);
+  border-radius: 4px;  
 }
+
+#results h3 {
+  display: inline-block; /* allows vertical margins */
+  margin-top: 40px;
+  margin-bottom: -10px;
+  margin-left: 15px;
+  padding: 15px;
+  color: var(--background-color);
+   background: var(--primary-color);
+   font-size: 1.5rem;
+  border-radius: 4px;  
+}
+
 
 #results p{
 color: var(--primary-color);
-margin-left: 15px;
+margin-left: 35px;
 font-size: 1.2rem;
 }
 /* Container for falling gifts */
 .gift-container {
 position: fixed; /* stays over the page */
-top: 0;
+top: 120px;
 left: 0;
 width: 100%;
 height: 100vh;
-pointer-events: none; /* clicks pass through */
 overflow: hidden;
 z-index: 1000; /* above other content */
 }
+
+
+
 
 /* Each gift */
 .gift {
